<resources>
    <string name="home_indicator">bottom_point</string>
    <string name="wallpaper_scrolling">all</string>
    <string name="flash_device">/sys/class/leds/flashlight/brightness</string>
    <string name="lunar_calendar">农历</string>
    <string name="lunar_zheng">正</string>
    <string name="lunar_leap">闰</string>
    <string name="lunar_ling">O</string>
    <string name="lunar_yi">一</string>
    <string name="lunar_er">二</string>
    <string name="lunar_san">三</string>
    <string name="lunar_si">四</string>
    <string name="lunar_wu">五</string>
    <string name="lunar_liu">六</string>
    <string name="lunar_qi">七</string>
    <string name="lunar_ba">八</string>
    <string name="lunar_jiu">九</string>
    <string name="lunar_shi">十</string>
    <string name="lunar_shi_yi">十一</string>
    <string name="lunar_shi_er">十二</string>
    <string name="lunar_chu_shi">初十</string>
    <string name="lunar_er_shi">二十</string>
    <string name="lunar_san_shi">三十</string>
    <string name="lunar_chu">初</string>
    <string name="lunar_nian">廿</string>
    <string name="lunar_yue">月</string>
    <string name="lunar_year">年</string>
    <string name="the_spring_festival">春节</string>
    <string name="lantern_festival">元宵节</string>
    <string name="the_dragon_boat_festival">端午节</string>
    <string name="double_seventh_day">七夕</string>
    <string name="the_mid_autumn_festival">中秋节</string>
    <string name="the_double_ninth_festival">重阳节</string>
    <string name="the_laba_rice_porridge_festival">腊八</string>
    <string name="new_years_day">元旦</string>
    <string name="valentines_day">情人节</string>
    <string name="international_womens_day">妇女节</string>
    <string name="arbor_day">植树节</string>
    <string name="fools_day">愚人节</string>
    <string name="labour_day">劳动节</string>
    <string name="chinese_youth_day">青年节</string>
    <string name="childrens_day">儿童节</string>
    <string name="partys_day">建党节</string>
    <string name="the_armys_day">建军节</string>
    <string name="teachers_day">教师节</string>
    <string name="national_day">国庆节</string>
    <string name="christmas_day">圣诞节</string>
    <string name="peace_day">和平紀念</string>
    <string name="national_father_day">國父誕辰</string>
    <string name="slight_cold">小寒</string>
    <string name="great_cold">大寒</string>
    <string name="spring_begins">立春</string>
    <string name="the_rains">雨水</string>
    <string name="insects_awaken">惊蛰</string>
    <string name="vernal_equinox">春分</string>
    <string name="clear_and_bright">清明</string>
    <string name="grain_rain">谷雨</string>
    <string name="summer_begins">立夏</string>
    <string name="grain_buds">小满</string>
    <string name="grain_in_ear">芒种</string>
    <string name="summer_solstice">夏至</string>
    <string name="slight_heat">小暑</string>
    <string name="great_heat">大暑</string>
    <string name="autumn_begins">立秋</string>
    <string name="stopping_the_heat">处暑</string>
    <string name="white_dews">白露</string>
    <string name="autumn_equinox">秋分</string>
    <string name="cold_dews">寒露</string>
    <string name="hoar_frost_falls">霜降</string>
    <string name="winter_begins">立冬</string>
    <string name="light_snow">小雪</string>
    <string name="heavy_snow">大雪</string>
    <string name="winter_solstice">冬至</string>
    <string name="chinese_date_unit">年月日</string>
    <string name="status_bar_date_formatter">%2$s</string>
    <string name="status_bar_toggle_advanced_sync_action">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_data_action">com.android.phone/.Settings</string>
    <string name="status_bar_toggle_divider_action">com.android.systemui/.settings.StyleSettings</string>
    <string name="status_bar_toggle_bluetooth_action">com.android.settings/com.android.settings.bluetooth.BluetoothSettings</string>
    <string name="status_bar_toggle_brightness_action">com.android.settings/com.android.settings.DisplaySettings</string>
    <string name="status_bar_toggle_flight_mode_action">com.android.settings/.WirelessSettings</string>
    <string name="status_bar_toggle_gps_action">com.android.settings/com.android.settings.SecuritySettings</string>
    <string name="status_bar_toggle_mute_action">com.android.settings/com.android.settings.SoundSettings</string>
    <string name="status_bar_toggle_network_type_action">com.android.phone/.MiuiPreferredNetworkTypeListPreference</string>
    <string name="status_bar_toggle_rotate_action">com.android.settings/com.android.settings.DisplaySettings</string>
    <string name="status_bar_toggle_sync_action">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_vibrate_action">com.android.settings/com.android.settings.SoundSettings</string>
    <string name="status_bar_toggle_wifi_action">com.android.settings/com.android.settings.wifi.WifiSettings</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="theme_process">com.miui.mihome.thememanager</string>
    <string name="lockscreen_process">com.miui.mihome.lockscreen</string>
    <string name="photoframe_process">com.miui.mihome.photoframe</string>
    <string name="share_process">com.miui.mihome.share</string>
    <string name="durationformatshort">%2$2d:%5$02d</string>
    <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="status_bar_date_formatter_ics">%2$s</string>
    <string name="status_bar_toggle_advanced_sync_action_ics">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_data_action_ics">com.android.phone/.Settings</string>
    <string name="status_bar_toggle_divider_action_ics">com.android.systemui/.settings.StyleSettings</string>
    <string name="status_bar_toggle_bluetooth_action_ics">com.android.settings/com.android.settings.Settings$BluetoothSettingsActivity</string>
    <string name="status_bar_toggle_brightness_action_ics">com.android.settings/com.android.settings.Settings$DisplaySettingsActivity</string>
    <string name="status_bar_toggle_flight_mode_action_ics">com.android.settings/com.android.settings.Settings$WirelessSettingsActivity</string>
    <string name="status_bar_toggle_gps_action_ics">com.android.settings/com.android.settings.Settings$LocationSettingsActivity</string>
    <string name="status_bar_toggle_mute_action_ics">com.android.settings/com.android.settings.Settings$SoundSettingsActivity</string>
    <string name="status_bar_toggle_network_type_action_ics">com.android.phone/.MiuiPreferredNetworkTypeListPreference</string>
    <string name="status_bar_toggle_rotate_action_ics">com.android.settings/com.android.settings.Settings$DisplaySettingsActivity</string>
    <string name="status_bar_toggle_sync_action_ics">com.android.settings/com.android.settings.Settings$ManageAccountsSettingsActivity</string>
    <string name="status_bar_toggle_vibrate_action_ics">com.android.settings/com.android.settings.Settings$SoundSettingsActivity</string>
    <string name="status_bar_toggle_wifi_action_ics">com.android.settings/com.android.settings.Settings$WifiSettingsActivity</string>
    <string name="app_label">Feedback</string>
    <string name="user_feedback">User Feedback</string>
    <string name="report_miui">Report to MIUI</string>
    <string name="menu_send">Send report</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_attach_screenshot">Attach screenshot</string>
    <string name="menu_discard">Discard</string>
    <string name="description">suggestions (required)</string>
    <string name="emailOrphone">Email or phonenumber</string>
    <string name="contactinfostr">Contact</string>
    <string name="btn_send">Send</string>
    <string name="err_type">Feedback type</string>
    <string name="err_type_reboot">System reboots</string>
    <string name="err_type_force_close">Force close</string>
    <string name="err_type_network">Network issues</string>
    <string name="err_type_others">Others</string>
    <string name="err_type_power_consuming">Power consumption</string>
    <string name="err_type_call">Call issues</string>
    <string name="err_type_suggestion">Suggestions</string>
    <string name="err_type_data_lost">Data lost</string>
    <string name="status_msg_pending_upload">%d feedbacks are uploading…</string>
    <string name="status_msg_collecting_log">Collecting logs</string>
    <string name="action_submit">Submit</string>
    <string name="section_err_type">Feedback type</string>
    <string name="section_description">Description</string>
    <string name="section_screenshot">Screenshot</string>
    <string name="toast_report_sent_succeed">The report has been sent</string>
    <string name="toast_report_sent_failed">Failed to send the report</string>
    <string name="toast_report_copied_to_clipboard">Report copied to clipboard</string>
    <string name="toast_description_required">The description and contact is required</string>
    <string name="toast_pending_log_collection">Collecting logs, please wait a moment</string>
    <string name="button_cancel">Cancel</string>
    <string name="description_designer">Designer:</string>
    <string name="description_author">Author:</string>
    <string name="description_size">Size:</string>
    <string name="description_uploadtime">Update:</string>
    <string name="description_download">Download:</string>
    <string name="description_version">Version:</string>
    <string name="description_summary">Summary:</string>
    <string name="resource_title">Resource Detail</string>
    <string name="pref_render_in_truecolor_title">High quality graphics</string>
    <string name="pref_render_in_truecolor_summary">Turning off this option will improve drawing performance.</string>
    <string name="pref_icon_shadow_title">Icon shadow</string>
    <string name="pref_icon_shadow_summary">Turn on or off the shadows on the Home Screen icons.</string>
    <string name="pref_launcher_setting">Launcher</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="default_launcher_settings_title">Default launcher</string>
    <string name="label_order_name">Product name:</string>
    <string name="label_order_price">Quantity:</string>
    <string name="password_hint">Please enter Xiaomi account password:</string>
    <string name="progress_loading">Processing, please wait...</string>
    <string name="button_retry">Retry</string>
    <string name="button_pay">Confirm</string>
    <string name="button_recharge">Recharge</string>
    <string name="balance">Balance:%1$s Mi Credits</string>
    <string name="mili_center">Mi Credit center</string>
    <string name="recharge_prepaid_title">Prepaid recharge cards</string>
    <string name="recharge_prepaid_summary">Supports China Mobile, China Unicom and China Telecom recharge cards</string>
    <string name="recharge_alipay_title">Alipay</string>
    <string name="recharge_alipay_summary">Supports Alipay recharge</string>
    <string name="recharge_tenpay_title">Tenpay</string>
    <string name="recharge_tenpay_summary">Supports Tenpay recharge</string>
    <string name="recharge_voucher_title">Mi Credit cards</string>
    <string name="recharge_voucher_summary">Supports recharge by Mi Credit cards</string>
    <string name="recharge_hint">1 RMB equals 1 Mi Credit</string>
    <string name="btn_recharge_large">Recharge now</string>
    <string name="recharge_other">Select other recharge methods</string>
    <string name="voucher_edit_hint">Password:</string>
    <string name="voucher_edit_limit">digits</string>
    <string name="micloud_use_existing">Existing</string>
    <string name="micloud_reg_new">New</string>
    <string name="title_login">Sign in XiaoMi account</string>
</resources>