<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/resource_info_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:gravity="center" android:id="@id/imageView1" android:paddingTop="20.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/resource_info_title" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/textView1" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/resource_title" />
    <ScrollView android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="20.0dip" android:scrollbars="vertical" android:fadingEdge="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/tableRow1" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_author" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourceauthor" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/tableRow2" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_designer" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourcedesigner" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/tableRow3" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_size" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourcesize" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/tableRow4" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_version" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourceversion" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/tableRow5" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/mark" android:text="@string/description_uploadtime" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourcemodifiedtime" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/tableRow6" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_download" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView android:id="@id/resourcedownload" style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/description_summary" style="@style/ResourceBrowser.ResourceProperty.Title" />
                <TextView style="@style/ResourceBrowser.ResourceProperty.Content" />
            </LinearLayout>
            <TextView android:id="@id/resourcesummary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:singleLine="false" style="@style/ResourceBrowser.ResourceProperty.Content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>