<?xml version="1.0" encoding="utf-8"?>
<com.xiaomi.xmsf.payment.VoucherView android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingTop="15.0dip" android:paddingRight="15.0dip" android:paddingBottom="13.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/editor_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="13.0dip">
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/voucher_edit_hint" />
        <EditText android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:id="@id/voucher_edit" android:background="@null" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/voucher_edit_limit" android:ems="10" android:numeric="integer" android:layout_weight="1.0" />
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
    <Button android:textColor="@color/text_color_white" android:id="@id/button_recharge" android:background="@drawable/btn_pay_orange_bkg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btn_recharge_large" />
    <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_orange" android:layout_gravity="center" android:id="@id/recharge_other" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:layout_marginBottom="15.0dip" android:text="@string/recharge_other" />
</com.xiaomi.xmsf.payment.VoucherView>