<?xml version="1.0" encoding="utf-8"?>
<com.xiaomi.xmsf.payment.PaymentView android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/payment" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/order_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/icon" android:layout_width="45.0dip" android:layout_height="45.0dip" android:layout_marginRight="5.0dip" />
            <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TableRow android:gravity="center_vertical">
                    <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:gravity="right|center" android:id="@id/label_order_name" android:text="@string/label_order_name" />
                    <TextView android:textSize="@dimen/text_font_size_medium" android:textColor="@color/text_color_dark_gray" android:gravity="left|center" android:id="@id/text_order_name" />
                </TableRow>
                <TableRow android:gravity="center_vertical">
                    <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:gravity="right|center" android:id="@id/label_order_price" android:text="@string/label_order_price" />
                    <TextView android:textSize="@dimen/text_font_size_medium" android:textColor="@color/text_color_orange" android:gravity="left|center" android:id="@id/text_order_price" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <View android:id="@id/divider" android:background="@drawable/divider_bg" android:layout_width="fill_parent" android:layout_height="@dimen/divider" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/info_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="35.0dip">
        <LinearLayout android:gravity="center" android:id="@id/error_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip">
            <ImageView android:id="@id/error_icon" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_error" />
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip">
                <TextView android:textSize="@dimen/text_font_size_large" android:textColor="@color/text_color_black" android:id="@id/error_title" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:id="@id/error_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@id/progress_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip">
            <ProgressBar android:id="@id/progress" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_marginRight="5.0dip" />
            <TextView android:textSize="@dimen/text_font_size_large" android:textColor="@color/text_color_black" android:id="@id/progress_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/progress_loading" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/password_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_gray" android:id="@id/password_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/password_hint" />
        <EditText android:id="@id/password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textPassword" />
    </LinearLayout>
    <LinearLayout android:id="@id/button_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
        <Button android:id="@id/button_cancel" android:background="@drawable/btn_pay_white_bkg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/button_cancel" android:layout_weight="1.0" />
        <Button android:id="@id/button_retry" android:background="@drawable/btn_pay_white_bkg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/button_retry" android:layout_weight="1.0" />
        <Button android:textColor="@color/text_color_white" android:id="@id/button_pay" android:background="@drawable/btn_pay_green_bkg" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/button_pay" android:layout_weight="1.0" />
        <Button android:textColor="@color/text_color_white" android:id="@id/button_recharge" android:background="@drawable/btn_pay_orange_bkg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/button_recharge" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:id="@id/bottom_area" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip">
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_black" android:id="@id/text_balance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/balance" />
        <View android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/text_font_size_small" android:textColor="@color/text_color_orange" android:gravity="right" android:layout_gravity="right" android:id="@id/text_mili_center" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mili_center" />
    </LinearLayout>
</com.xiaomi.xmsf.payment.PaymentView>